fix: исправить работу приложения в соответствии со спецификацией